Mobile slider styling fix. Got rid of arrow functionality on mobile. Image now populates across the screen and closes on click. Next Steps: Fix menu styling on mobile and possibly adjust font one last time.

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Futura";
-  src: url("./font/FuturaBoldFont.tttf");
+  src: url("./font/FuturaBoldFont.ttf");
 }
 
 * {
@@ -24,7 +24,6 @@ body{
     align-self: center;
     align-items: center;
     display: flex;
-    font-weight: bold;
     flex-direction: column;
     height: 90vh;
     justify-content: space-around;
@@ -37,7 +36,7 @@ button{
   color: white;
   cursor: pointer;
   font-size: .5em;
-  font-weight: bold;
+
   width: 100%;
 }
 
@@ -66,7 +65,6 @@ select{
     color: white;
     cursor: pointer;
     font-size: .5em;
-    font-weight: bold;
     margin: 8px 0;
     min-height: fit-content;
     padding: 12px 20px;
@@ -331,6 +329,28 @@ opacity: 60%;
       font-size: 7vw;
       text-shadow: 5px 5px #0c0303;
   }
+  .slider-middle {
+    width: 100vw;
+  }
+
+  .slider-right {
+    width: 0;
+    display: none;
+  }
+
+  .slider-left {
+    width: 0;
+    display: none;
+  }
+
+  .arrow-right {
+    display: none;
+  }
+
+  .arrow-left {
+    display: none;
+  }
+
   }
   
   @media screen and (max-width: 600px) {
@@ -338,8 +358,53 @@ opacity: 60%;
       font-size: 8vw;
       text-shadow: 4px 4px #0c0303;
   }
+
+  .slider-middle {
+    width: 100vw;
+  }
+
+  .slider-right {
+    width: 0;
+    display: none;
+  }
+
+  .slider-left {
+    width: 0;
+    display: none;
+  }
+
+  .arrow-right {
+    display: none;
+  }
+
+  .arrow-left {
+    display: none;
+  }
+
   }
 
   @media screen and (max-width: 400px){
+
+    .slider-middle {
+      width: 100vw;
+    }
+  
+    .slider-right {
+      width: 0;
+      display: none;
+    }
+  
+    .slider-left {
+      width: 0;
+      display: none;
+    }
+  
+    .arrow-right {
+      display: none;
+    }
+  
+    .arrow-left {
+      display: none;
+    }
 
   }
